added tomcat startup parameters; also clean tomcat temp dir
git-svn-id: http://code.jaspersoft.com/svn/repos/jasperreports/trunk@4674 76e25fc1-081a-0410-bb1b-c96bc70638b7